changed: add check for cooking sign